@@ -1,5 +1,11 @@
 2005-02-08  Alexander Gottwald  <ago at freedesktop dot org>
 
+	* winkeybd.c:
+	* winkeynames.h:
+	Updated fix for ABNT2 and HK_Toggle keys. 
+
+2005-02-08  Alexander Gottwald  <ago at freedesktop dot org>
+
 	* winkeybd.h:
 	* winkeynames.h:
 	Backout ABNT2 and HK_Toggle fix since it broke keys F1 and F4. 
